HTML code filled in further

--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
+<html>
+  <head>
+    <title>Movie Search App</title>
+  </head>
+  <body>
+    <h1>Movie Search</h1>
+    <form>
+      <label for="search-input">Search:</label>
+      <input type="text" id="search-input" name="search-input">
+      <button type="submit" id="search-button">Search</button>
+    </form>
+    <div id="search-results"></div>
+</script>
 </body>
 </html>
