Javascript and HTML additions and bugs

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       <button type="submit" id="search-button">Search</button>
     </form>
     <div id="search-results"></div>
-</script>
-</body>
+    <script src="src/index.js"></script>
+    <script src="src/keys.js"></script>
+  </body>
 </html>
