Search-Button error fixed

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <h1>Movie Search</h1>
     <form>
       <label for="search-input">Search:</label>
-      <input type="text" id="search-input" name="search-input">
+      <input type="text" id="search-input" placeholder="Search for a movie...">
       <button type="submit" id="search-button">Search</button>
     </form>
     <div id="search-results"></div>
-    <script src="src/index.js"></script>
     <script src="src/keys.js"></script>
+    <script src="src/index.js"></script>
   </body>
 </html>
