--- a/index.html
+++ b/index.html
@@ -11,7 +11,13 @@
       <input type="text" id="search-input" placeholder="Search for a movie...">
       <button type="submit" id="search-button">Search</button>
     </form>
-    <div id="search-results"></div>
+    <div id="results">
+        <h2>Results</h2>
+        <div class="movies-container">
+          <div class="movies">
+          </div>
+        </div>
+      </div>
     <script src="src/keys.js"></script>
     <script src="src/index.js"></script>
   </body>
