Added Saved Movies div

--- a/index.html
+++ b/index.html
@@ -18,6 +18,16 @@
           </div>
         </div>
       </div>
+     <!-- Add saved movies list to the HTML -->
+  <div id="saved-results">
+    <!-- <h2>Saved Movies</h2> -->
+    <button id="toggle-btn">See My Liked Movies</button>
+    <div class="saved-movies-container">
+      <ul class="saved-movies">
+        <h1>Saved Movies</h1>
+        <br>
+      </ul>
+      
     <script src="src/keys.js"></script>
     <script src="src/index.js"></script>
   </body>
