--- a/index.html
+++ b/index.html
@@ -23,11 +23,14 @@
     <!-- <h2>Saved Movies</h2> -->
     <button id="toggle-btn">See My Liked Movies</button>
     <div class="saved-movies-container">
-      <ul class="saved-movies">
-        <h1>Saved Movies</h1>
-        <br>
-      </ul>
+        <h1 class="results-title">Saved Movies</h1>
+        <div class="saved-movies">
+          <br>
+        </div>
+      </div>
       
+      
+
     <script src="src/keys.js"></script>
     <script src="src/index.js"></script>
   </body>
