Perhaps some changes to keep or delete

--- a/index.html
+++ b/index.html
@@ -18,16 +18,14 @@
           </div>
         </div>
       </div>
-     <!-- Add saved movies list to the HTML -->
-  <div id="saved-results">
-    <!-- <h2>Saved Movies</h2> -->
-    <button id="toggle-btn">See My Liked Movies</button>
-    <div class="saved-movies-container">
-        <h1 class="results-title">Saved Movies</h1>
-        <div class="saved-movies">
-          <br>
+     <div id="saved-results">
+        <button id="toggle-btn">See My Liked Movies</button>
+        <div class="saved-movies-container">
+          <ul class="saved-movies">
+            <h2>Saved Movies</h2>
+          </ul>
         </div>
-      </div>
+    </div>
       
       
 
