--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </div>
      <div id="saved-results">
         <button id="toggle-btn">See My Liked Movies</button>
-        <div class="saved-movies-container">
+        <div id = "saved-movies-container"class="saved-movies-container">
           <ul class="saved-movies">
             <h2>Saved Movies</h2>
           </ul>
