ReadMe page and logo additions

--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Movie Search App</title>
+    <title>Watch[ed] It - The Movie Search App</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1>Movie Search</h1>
+  <img src="images/WI.png" alt="Watch[ed] It - The Movie Search App">
+    <form>
+
     <form>
       <label for="search-input">Search:</label>
       <input type="text" id="search-input" placeholder="Search for a movie...">
