--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Watch[ed] It - The Movie Search App</title>
+    <title>Watch It - The Movie Search App</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-  <img src="images/WI.png" alt="Watch[ed] It - The Movie Search App">
+  <img src="images/WI.png" alt="Watch It - The Movie Search App">
     <form>
 
     <form>
